fixed navbar alignment with body and altered size to suit small screen sizes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -212,6 +212,10 @@ p {
 .gameWelcome-section h2 {
   font-size: 50px;
 }
+
+.navbar-brand {
+  font-size: 25px;
+}
 /* //Media Queries for responsiveness
 
 
